// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action cell component renders an action correctly 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root test-class MuiTableCell-body"
>
  <p
    key="test"
  >
    Rendered an action!
  </p>
</div>
`;

exports[`Action cell component renders no actions correctly 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root test-class MuiTableCell-body"
/>
`;
